add search by rand and min

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ strip = "debuginfo"
 #target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'
 
 [dependencies]
+rand = "0.9.1"
 rayon = "1.10.0"
